# gstreamer-plugins

./: CMakeLists.txt  Dockerfile  README.md
cmake/modules/: FindGObject.cmake  FindGStreamer.cmake  FindGStreamerPluginsBase.cmake  GetGitRevisionDescription.cmake  MacroFindGStreamerLibrary.cmake  MacroLogFeature.cmake
gst-libs/klv/: CMakeLists.txt  klv.c  klv.h
gst/example/: CMakeLists.txt  gstexample.c  gstexample.h
gst/klv/: CMakeLists.txt  gstklv.c  gstklvinject.c  gstklvinject.h  gstklvinspect.c  gstklvinspect.h  gstklvtimestamp.c  gstklvtimestamp.h
